# BigQueryDave

./: .gitignore  01) AListOfQueryExamples.sql  02) bq_load.bat  03) bq_load_1.txt  04) bq_load_2.txt  05) bq_query.txt  06) CREATE TABLE (External).ddl  08) current_ossn_user.ddl  09) ETL_step1.bat  10) ETL_step3.bat  11) ETL1.bat  12) google_commands.bat  13) googlenotes.txt  14) gsutil mv.txt  15) row_level_security.sql  16) SELECT TABLESAMPLE.ddl  17) test.bat  18) user.ddl  Create table.sql  External Table.sql  FindTables.sql  Lesson1 - How To Preview Data Free.sql  Lesson2 - How To View BQ Metadata.sql  Lesson3 - How To View Slot Usage.sql  Lesson4 - Basic Partition Join.sql  Lesson5 - Partition, Cluster fields.sql  Lesson6-Python.py  Lesson7 - Time Travel.sql  Lesson8 - How To Model in BigQuery.sql  README.md  basics.md  change_local_account.bat  list_bq_tables.py  pyproject.toml  test_sap_konp_delta.ddl  test_sap_konp_hist.ddl  test_sap_konp_snpsht.ddl
bq_create_table_as/: ctas.sql
bq_csv_external_table/: bq_external_table.ddl  samplelog_1.csv  samplelog_2.csv  samplelog_3.csv  samplelog_4.csv
src/bigquerydave/: .schemawiz_config3  BigQuery.sql  bq_estimate_only.py  bqd.py  folder_details.tsv  loadbqdatasets.py  loadbqtabledef.py  loadbqtables.py  loadbuckets.py  loadgcpfolders.py  loadgcpprojectresources.py  loadgcpprojects.py  loadgcsbuckets.py  loadgcsfiles.py  loadprojadmins.py  project_resource.tsv  projects.tsv  showbqdatasets.py  test.py  (+15 more)
tests/: bq_estimate_query.py  change_local_account.bat  list_bq_datasets.py  list_bq_tables.py  list_gcp_projects.py
(+1 files in other folders)
